# agents

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  KEYBINDINGS.md  LICENSE  Makefile  README.md  REMOTE.md  biome.json  docker-compose.yml  files_to_replace.txt  package.json  replace_all.py  vitest.config.ts
.docs/: architecture.md  codex-prerequisites.md  provider-architecture.md  quick-start.md  runtime-modes.md  scripts.md  workspace-layout.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: package.json
apps/desktop/electron/: package.json  tsconfig.json  tsdown.config.ts
apps/desktop/qt6/: CMakeLists.txt  package.json
apps/desktop/qt6/scripts/: cmake-build.mjs  run-qt.mjs  wait-then-qt-dev.mjs
apps/desktop/qt6/src/: main.cpp
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/tauri/: package.json  tsconfig.json
apps/server/: package.json  tsdown.config.ts
apps/server/integration/: OrchestrationEngineHarness.integration.ts  TestProviderAdapter.integration.ts  orchestrationEngine.integration.test.ts  providerService.integration.test.ts
apps/server/scripts/: cli.ts
apps/server/src/: attachmentStore.test.ts  attachmentStore.ts  bun.d.ts  config.ts  (+34 more)
apps/web/: index.html  package.json  vite.config.ts
docs/: FINDINGS-REPO-CLEANUP.md  release.md
flatpak/: com.agents.agents.desktop  com.agents.agents.metainfo.xml  com.agents.agents.yml
scripts/: build-desktop-artifact.ts  dev-runner.test.ts  dev-runner.ts  package.json  sync-vscode-icons.mjs  update-deps.ts
scripts/lib/: brand-assets.ts
(+218 files in other folders)
